turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:7: error: not found: value color
				setCouleurBrosse(color(j+1));
                                                 ^LangtonsAnt:18: error: not found: value color
				setCouleurBrosse(color(j+1));
                                                 ^