turmites.lessons.turmites.langtoncolors.LangtonColors.scala.code
def step(rule:Array[Char], colors:Array[Color]) {
for(i<- 0 to rule.length-1){
	if(rule(i)=='R'){
		for(j<-0 to colors.length-1){
			if(getCouleurSol()==colors(j)){
				setCouleurBrosse(color(j+1));
				droite();avance();
				baisseBrosse();
				leveBrosse();
				avance();
				
			}
		}
	}else{ 
		for(j<-0 to colors.length-1){
			if(getCouleurSol()==colors(j)){
				setCouleurBrosse(color(j+1));
				gauche();avance();
				baisseBrosse();
				leveBrosse();
				avance();
			}
		}
	}
}
}
